--- a/0x06-unittests_in_js/package.json
+++ b/0x06-unittests_in_js/package.json
@@ -4,7 +4,7 @@
   "description": "0x06. Unittests in JS",
   "main": "0-calcul.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha 0-calcul.test.js"
   },
   "keywords": [],
   "author": "",
