--- a/0x06-unittests_in_js/package.json
+++ b/0x06-unittests_in_js/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "0x06. Unittests in JS",
   "main": "0-calcul.js",
+  "type": "module",
   "scripts": {
     "test": "mocha"
   },
@@ -10,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "chai": "^5.1.2",
     "mocha": "^11.0.1"
   }
 }
